--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "firebase": "^5.2.0",
     "register-service-worker": "^1.0.0",
+    "slugify": "^1.3.0",
     "vue": "^2.5.16",
+    "vue-image-upload-resize": "^1.1.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -18,7 +22,10 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
-    "vue-template-compiler": "^2.5.16"
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.16.0"
   },
   "eslintConfig": {
     "root": true,
