--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pincards",
+  "name": "vuebasecamp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "firebase": "^5.2.0",
     "register-service-worker": "^1.0.0",
     "slugify": "^1.3.0",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
     "vue-image-upload-resize": "^1.1.6",
     "vue-router": "^3.0.1",
